--- a/kadai2/index.html
+++ b/kadai2/index.html
@@ -1,1 +1,87 @@
-差分用
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<title></title>
+<meta charset="UTF-8">
+<link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+	<div class="wrapper">
+	 <div class="header">
+	 <div class="container">
+		<div class="header-wrap">
+		<div class="header-logo">
+			<img src="images/logo.png" alt="">
+		</div>
+		<div class="header-nav">
+			<ul>
+				<li><a href="#" target="_brank">ホームへ戻る</a></li>
+				<li><a href="#" target="_brank">お知らせ</a></li>
+				<li><a href="#" target="_brank">新着情報</a></li>
+				<li><a href="#" target="_brank">お問い合わせ</a></li>
+			</ul>
+		</div>
+	   </div>
+   
+		<div class="header-image">
+			<img src="images/image.jpg" alt="">
+		</div>
+	  <div class="contents">
+	    <div class="main-content">
+
+			<h4>プログラミングを学習して副業してみよう！！</h4>
+			<p>皆さんは副業の経験がありますか？プログラミングは<a href="#" target="_about">おすすめの副業ランキング</a>でもかなり人気が高いですね。</p>
+	    	<p>----------</p>
+	    	<p>--中略--</p>
+		    <p>----------</p>
+	    </div>
+    	<div class="sub-content">
+    		<div class="sub1">
+				<h4>仕事する場所が選べる。</h4>
+				<p>----------</p>
+				<p>--中略--</p>
+				<p>----------</p>
+	  	    </div>
+	    	<div class="sub2">
+				<h4>高単価な仕事を狙える</h4>
+				<p>----------</p>
+				<p>--中略--</p>
+				<p>----------</p></div>
+			<div class="sub3">
+				<h4>需要が高い</h4>
+				<p>----------</p>
+				<p>--中略--</p>
+				<p>----------</p></div>
+	        </div>
+	    </div>
+	 </div>
+
+	 <div class="footer">
+		<div class="footer-content">
+		<div class="footer-left">
+		    <h4>学習コンテンツ</h4>
+			<ul>
+				<li><a href="#" target="_brank">HTML/CSS</a></li>
+				<li><a href="#" target="_brank">JaveScript</a></li>
+				<li><a href="#" target="_brank">PHP</a></li>
+			</ul>
+	    </div>
+	    <div class="footer-right">
+	    	<h4>その他ご相談</h4>
+			<ul>
+				<li><a href="#" target="_brank">学習方法</a></li>
+				<li><a href="#" target="_brank">キャリア相談</a></li>
+			</ul>
+	    </div>
+	    </div>
+		<p>copyright 2019 manaberuit. All rights reserved.</p>
+
+	 </div>
+     </div>
+
+	</div>
+	
+
+</body>
+</html>
